--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title><DZ-3></title>
+    <title><DZ-5></title>
   </head>
   <body>
     <header class="container page-header">
@@ -37,19 +37,18 @@
       </nav>
       <ul class="site-contact list">
         <li class="item-convert">
-          <svg class="convert" width="16" height="12">
-            <use href="./images/icon.svg#icon-post"></use>
-          </svg>
-          <a href="./images/icon.svg#icon-post"> </a>
           <a href="mailto:info@devstudio.com" class="info"
-            >info@devstudio.com</a
+            ><svg class="convert" width="16" height="12">
+              <use href="./images/icon.svg#icon-post"></use>
+            </svg>info@devstudio.com</a
           >
         </li>
         <li class="item-phone">
-          <svg class="telefon" width="16" height="12">
-            <use href="./images/icon.svg#icon-telefon"></use>
-          </svg>
-          <a href="tel:+380961111111" class="info">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="info"
+            ><svg class="telefon" width="16" height="12">
+              <use href="./images/icon.svg#icon-telefon"></use>
+              </svg>+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
@@ -75,116 +74,134 @@
             </li>
           </ul>
 
-          <ul class="work-link list">
+          <ul class="work-list list">
             <li class="work-item">
-              <img
-                src="./images/img.1.jpg"
-                alt="Noutbook"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">Технокряк</h2>
-                <p class="container-text">Веб-сайт</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.1.jpg"
+                  alt="Noutbook"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">Технокряк</h2>
+                  <p class="container-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img.2.jpg"
-                alt="Backetbol"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="container-text">Дизайн</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.2.jpg"
+                  alt="Backetbol"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="container-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img.3.jpg"
-                alt="Firma"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">Ресторан Seafood</h2>
-                <p class="container-text">Додаток</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.3.jpg"
+                  alt="Firma"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">Ресторан Seafood</h2>
+                  <p class="container-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img.4.jpg"
-                alt="Nauchniki"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">Проєкт Prime</h2>
-                <p class="container-text">Маркетинг</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.4.jpg"
+                  alt="Nauchniki"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">Проєкт Prime</h2>
+                  <p class="container-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img.5.jpg"
-                alt="Kirpichi"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">Проєкт Boxes</h2>
-                <p class="container-text">Додаток</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.5.jpg"
+                  alt="Kirpichi"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">Проєкт Boxes</h2>
+                  <p class="container-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img.6.jpg"
-                alt="Monitor"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">Inspiration has no Borders</h2>
-                <p class="container-text">Веб-сайт</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.6.jpg"
+                  alt="Monitor"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">Inspiration has no Borders</h2>
+                  <p class="container-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img.7.jpg"
-                alt="Book"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">Видання Limited Edition</h2>
-                <p class="container-text">Дизайн</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.7.jpg"
+                  alt="Book"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">Видання Limited Edition</h2>
+                  <p class="container-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img.8.jpg"
-                alt="Yarlik"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">Проєкт LAB</h2>
-                <p class="container-text">Маркетинг</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.8.jpg"
+                  alt="Yarlik"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">Проєкт LAB</h2>
+                  <p class="container-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="work-item">
-              <img
-                src="./images/img.9.jpg"
-                alt="Nout"
-                width="370"
-                height="295"
-              />
-              <div class="work-name">
-                <h2 class="container-title">Growing Business</h2>
-                <p class="container-text">Додаток</p>
-              </div>
+              <a href="" class="work-link">
+                <img
+                  src="./images/img.9.jpg"
+                  alt="Nout"
+                  width="370"
+                  height="295"
+                />
+                <div class="work-name">
+                  <h2 class="container-title">Growing Business</h2>
+                  <p class="container-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
