--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title><DZ-4</title>
+    <title><DZ-5</title>
   </head>
   <body>
     <header class="container page-header">
@@ -40,19 +40,18 @@
       </nav>
       <ul class="site-contact list">
         <li class="item-convert">
-          <svg class="convert" width="16" height="12">
-            <use href="./images/icon.svg#icon-post"></use>
-          </svg>
-          <a href="./images/icon.svg#icon-post"> </a>
           <a href="mailto:info@devstudio.com" class="info"
-            >info@devstudio.com</a
+            ><svg class="convert" width="16" height="12">
+              <use href="./images/icon.svg#icon-post"></use>
+            </svg>info@devstudio.com</a
           >
         </li>
         <li class="item-phone">
-          <svg class="telefon" width="16" height="12">
-            <use href="./images/icon.svg#icon-telefon"></use>
-          </svg>
-          <a href="tel:+380961111111" class="info">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="info"
+            ><svg class="telefon" width="16" height="12">
+              <use href="./images/icon.svg#icon-telefon"></use>
+            </svg>+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
