--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
           >Web<span class="logo-start">Studio</span></a
         >
 
-        <ul class="site-nav">
-          <li class="list">
-            <a href="" class="link current">Студія</a>
+        <ul class="site-nav list">
+          <li class="site-item">
+            <a href="" class="site-link current">Студія</a>
           </li>
-          <li class="list">
-            <a href="./portfolio.html" class="link">Портфоліо</a>
+          <li class="site-item">
+            <a href="./portfolio.html" class="site-link ">Портфоліо</a>
           </li>
-          <li class="list"><a href="" class="link">Контакти</a></li>
+          <li class="site-item"><a href="" class="site-link">Контакти</a></li>
         </ul>
+      
       </nav>
+
       <ul class="site-contact list">
         <li class="item-convert">
           <a href="mailto:info@devstudio.com" class="info"
