--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title><DZ-5></title>
+    <title><DZ-3></title>
   </head>
   <body>
     <header class="container page-header">
@@ -25,16 +25,17 @@
           >Web<span class="logo-start">Studio</span></a
         >
 
-        <ul class="site-nav">
-          <li class="list">
-            <a href="./index.html" class="link">Студія</a>
+        <ul class="site-nav list">
+          <li class="site-item">
+            <a href="./index.html" class="site-link">Студія</a>
           </li>
-          <li class="list">
-            <a href="" class="link current">Портфоліо</a>
+          <li class="site-item">
+            <a href="" class="site-link current">Портфоліо</a>
           </li>
-          <li class="list"><a href="" class="link">Контакти</a></li>
+          <li class="site-item"><a href="" class="site-link">Контакти</a></li>
         </ul>
       </nav>
+
       <ul class="site-contact list">
         <li class="item-convert">
           <a href="mailto:info@devstudio.com" class="info"
@@ -47,7 +48,7 @@
           <a href="tel:+380961111111" class="info"
             ><svg class="telefon" width="16" height="12">
               <use href="./images/icon.svg#icon-telefon"></use>
-              </svg>+38 096 111 11 11</a
+            </svg>+38 096 111 11 11</a
           >
         </li>
       </ul>
