--- a/index.html
+++ b/index.html
@@ -131,28 +131,36 @@
 
       <section class="section-activ">
         <div class="container">
-          <h2 class="activity-title">Чим ми займаємося</h2>
-          <ul class="activity">
-            <li class="list">
+          <h2 class="activ-title">Чим ми займаємося</h2>
+          <ul class="activ-list list">
+            <li class="activ-item">
               <img
                 src="./images/komp-1.jpg"
                 alt="зображення робочого столу"
                 width="370"
               />
+              <div class="activ-description">
+                <p class="activ-text">Десктопні додатки</p>
+              </div>
             </li>
-            <li class="list">
+            <li class="activ-item">
               <img
                 src="./images/komp-2.jpg"
                 alt="зображення робочого столу"
                 width="370"
-              />
+              /><div class="activ-description">
+                <p class="activ-text">Мобільні додатки</p>
+              </div>
             </li>
-            <li class="list">
+            <li class="activ-item">
               <img
                 src="./images/komp-3.jpg"
                 alt="зображення робочого столу"
                 width="370"
               />
+              <div class="activ-description">
+                <p class="activ-text">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -442,10 +450,11 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button data-modal-close>Open</button>
+        <button class="modal-btn"
+         data-modal-close>Open</button>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> 
   </body>
 </html>
 
