--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
         </li>
       </ul>
     </header>
-
     <main>
       <section class="heroy">
         <div class="heroy-content">
           <h1 class="slogan">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="heroy-button" data-modal-open>Замовити послугу</button>
+          <button type="button" class="heroy-btn"  data-modal-open>Замовити послугу</button>
         </div>
       </section>
 
@@ -448,13 +447,12 @@
         </div>
       </section>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn"
-         data-modal-close>Open</button>
+        <button type="button" class="modal-btn" data-modal-close>Х</button>
       </div>
     </div>
-    <script src="./js/modal.js"></script> 
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
 
