--- a/portfolio.html
+++ b/portfolio.html
@@ -76,20 +76,26 @@
           </ul>
 
           <ul class="work-list list">
+
             <li class="work-item">
               <a href="" class="work-link">
-                <img
-                  src="./images/img.1.jpg"
+                <div class="work-image">
+                <img src="./images/img.1.jpg"
                   alt="Noutbook"
                   width="370"
-                  height="295"
-                />
+                  />
+                <p class="work-comment">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+                
                 <div class="work-name">
                   <h2 class="container-title">Технокряк</h2>
                   <p class="container-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
+
+
+
             <li class="work-item">
               <a href="" class="work-link">
                 <img
