--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <title><DZ-5</title>
   </head>
   <body>
-    <header class="container page-header">
+    <header class="page-header">
+      <div class="container header">
       <nav class="main-nav">
         <a href="./index.htm" class="logo"
           >Web<span class="logo-start">Studio</span></a
@@ -56,6 +57,7 @@
           >
         </li>
       </ul>
+      </div>
     </header>
     <main>
       <section class="heroy">
@@ -447,12 +449,13 @@
         </div>
       </section>
     </footer>
-    <!-- <div class="backdrop is-hidden" data-modal>
+    
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>Х</button>
       </div>
     </div>
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
 
