--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title><DZ-3></title>
+    <title><DZ-5></title>
   </head>
   <body>
-    <header class="container page-header">
+    <header class="page-header">
+      <div class="container header">
       <nav class="main-nav">
         <a href="./index.html" class="logo"
           >Web<span class="logo-start">Studio</span></a
@@ -52,6 +53,8 @@
           >
         </li>
       </ul>
+      </div>
+      
     </header>
 
     <main>
