--- a/index.html
+++ b/index.html
@@ -452,7 +452,10 @@
     
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-btn" data-modal-close>Х</button>
+        <button type="button" class="modal-btn" data-modal-close>
+          <svg class="footer-open" width="11" height="11">
+          <use href="./images/icon.svg#icon-open"></use>
+        </svg></button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
