--- a/index.html
+++ b/index.html
@@ -452,8 +452,7 @@
     
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-btn" data-modal-close>
-          <svg class="footer-open" width="11" height="11">
+        <button type="button" class="modal-btn" data-modal-close><svg class="footer-open" width="11" height="11">
           <use href="./images/icon.svg#icon-open"></use>
         </svg></button>
       </div>
